<resources>


    <string name="smoothlistview_header_hint_normal">下拉刷新</string>
    <string name="smoothlistview_header_hint_ready">松开刷新数据</string>
    <string name="smoothlistview_header_hint_loading">正在加载...</string>
    <string name="smoothlistview_header_last_time">上次更新时间：</string>
    <string name="smoothlistview_footer_hint_normal">查看更多</string>
    <string name="smoothlistview_footer_hint_ready">松开载入更多</string>

    <string name="app_name">Peiliao</string>
    <string name="recommend">推荐</string>
    <string name="latest">最新</string>
    <string name="today">今日</string>
    <string name="hot">热销</string>
    <string name="ican">我能 • </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="service_size">服务规格：</string>
    <string name="price">元</string>
    <string name="service_type">服务方式：</string>
    <string name="service_details">服务详情</string>
    <string name="service_content">服务内容：</string>
    <string name="order_sum">订单总金额：</string>
    <string name="pay_type">支付方式：</string>
    <string name="contact">联系人：</string>
    <string name="leave_message">留言：</string>
    <string name="input_leave_message">点此输入留言信息</string>
    <string name="totalprice">合计：</string>
    <string name="sale">已优惠：</string>
    <string name="stock">库存：</string>
    <string name="choose_srevice">服务选项</string>
    <string name="service_appointment">预约服务</string>
    <string name="search_contacts">搜索联系人</string>
    <string name="talent">牛人</string>
    <string name="recommand_for_you">为您推荐</string>
    <string name="message">消息</string>
    <string name="notification">通知</string>
    <string name="msg_preview">你好，很高兴认识你！</string>
    <string name="nike_name">爱吃猫的鱼</string>
    <string name="msg_demo">你好，很高兴认识你，请问您有什么需要帮助</string>
    <string name="chat_msg_time">12月8日 下午 14:27</string>
    <string name="input_msg">请输入消息...</string>
    <string name="voice">语音</string>
    <string name="text_and_img">图片/文字</string>
    <string name="publish_voice">发布语音</string>
    <string name="publish">发布</string>
    <string name="choose_service">选择相关服务</string>
    <string name="sync_to">同步到</string>
    <string name="long_click_to_record">长按录音</string>
    <string name="publish_text">发布图片文字</string>
    <string name="description">描述一下吧</string>
    <string name="publish_service">发布服务</string>
    <string name="next_step">下一步</string>
    <string name="relate_to_skills">关联职业技能</string>
    <string name="service_publish_1">1、关联您的职业技能</string>
    <string name="setting_skills"><![CDATA[没有你想关联的技能？去设置 >]]></string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="service_publish_2">2、请在这里填写服务内容</string>
    <string name="example_for_skills">如：教烘焙、帮跟拍、代遛狗</string>
    <string name="text_num">0/300</string>
    <string name="unit">单位：</string>
    <string name="please_input_service_unit">请填写服务选项</string>
    <string name="service_price">价格：</string>
    <string name="please_input_price">请填写价格</string>
    <string name="please_input_stock">请填写库存</string>
    <string name="service_publish_3">3、请选择您的服务方式吧</string>
    <string name="choose_service_time">可选服务时间</string>
    <string name="choose_service_range">选择服务范围</string>
    <string name="limit_range">限定范围</string>
    <string name="unlimit_range">任何地方都可以去</string>
    <string name="talent_city">武汉市射手座</string>
    <string name="his_career">Ta的职业</string>
    <string name="service_num">服务数：</string>
    <string name="career">初级摄影师</string>
    <string name="comment_num">评价数：</string>
    <string name="user_introduce">个人简介</string>
    <string name="user_introduce_content">你好，我是一名字郑州的信息工程大学的一名学生，我的性格偏向于内向，呵呵呵呵呵呵呵呵呵呵呵呵</string>
    <string name="my_tips">我的标签</string>
    <string name="authentication">个人认证</string>
    <string name="follow">关注</string>
    <string name="zone_content">你一定不知道我有多用心，求关注，求赞，谢谢大家呵呵呵呵呵呵呵呵呵呵</string>
    <string name="time">3 小时前</string>
    <string name="choose_relative_serivce">选择关联服务</string>
    <string name="save">保存</string>
    <string name="time_manager">时间管理</string>
    <string name="ok">确定</string>
    <string name="monday">星期一</string>
    <string name="Saturday">星期六</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="Sunday">星期日</string>
    <string name="Tuesday">星期二</string>
    <string name="morning">上午（09：00–12：00）</string>
    <string name="afternoon">下午（12：00–17：00）</string>
    <string name="evening">晚上（17：00–24：00）</string>
    <string name="notification_preview">因为您未付款，系统只好关闭您的订单！给您带来的不便，还请谅解，谢谢。</string>
    <string name="hotter">热门</string>
    <string name="leave_a_message">我要留言</string>
    <string name="skill_type">旅游顾问</string>
    <string name="finish">完成</string>
    <string name="title_activity_get_money_details">GetMoneyDetailsActivity</string>
    <string name="title_activity_draw_money_details">DrawMoneyDetails</string>
</resources>
