<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <LinearLayout
        android:background="@color/gray"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:gravity="center"
            android:textSize="@dimen/text_title"
            android:layout_weight="1"
            android:id="@+id/tv_recommend"
            android:layout_width="0dp"
            android:text="@string/recommend"
            android:layout_height="match_parent"/>

        <TextView
            
            android:gravity="center"
            android:textSize="@dimen/text_title"
            android:layout_weight="1"
            android:id="@+id/tv_latest"
            android:layout_width="0dp"
            android:text="@string/latest"
            android:layout_height="match_parent"/>

        <TextView
            android:gravity="center"
            android:textSize="@dimen/text_title"
            android:layout_weight="1"
            android:id="@+id/tv_today"
            android:layout_width="0dp"
            android:text="@string/today"
            android:layout_height="match_parent"/>

        <TextView
            android:gravity="center"
            android:textSize="@dimen/text_title"
            android:layout_weight="1"
            android:id="@+id/tv_hot"
            android:layout_width="0dp"
            android:text="@string/hot"
            android:layout_height="match_parent"/>

    </LinearLayout>

</RelativeLayout>