<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_recommend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/recommend"
            android:textSize="@dimen/text_title"/>

        <TextView

            android:id="@+id/tv_latest"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/latest"
            android:textSize="@dimen/text_title"/>

        <TextView
            android:id="@+id/tv_today"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/today"
            android:textSize="@dimen/text_title"/>

        <TextView
            android:id="@+id/tv_hot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hot"
            android:textSize="@dimen/text_title"/>

    </LinearLayout>

</LinearLayout>