<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/home_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll"
        android:orientation="vertical">


    </LinearLayout>


    <LinearLayout
        android:id="@+id/home_key_word"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_recommend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/recommend"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_latest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/latest"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/today"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_hot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hot"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorMain"
        android:orientation="horizontal">

        <GridView
            android:id="@+id/item_dock_grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0.0dip"
            android:layout_marginRight="0.0dip"
            android:columnWidth="155.0dip"
            android:fitsSystemWindows="false"
            android:gravity="center"
            android:horizontalSpacing="0.0dip"
            android:numColumns="4"
            android:overScrollMode="never"
            android:paddingLeft="8.0dip"
            android:paddingRight="8.0dip"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="2.0dip"/>

    </LinearLayout>



</RelativeLayout>
