<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="50dp"
        android:paddingStart="50dp">


        <TextView
            android:id="@+id/tv_follow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_m"
            android:text="@string/follow"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/text_title"/>

        <TextView
            android:id="@+id/tv_hotter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_m"
            android:text="@string/hotter"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_title"/>

        <TextView

            android:id="@+id/tv_latest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_m"
            android:text="@string/latest"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_title"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_centerInParent="true"
            android:background="@color/colorDivLine"/>

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_common_dot"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_common_dot"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView34"
            android:layout_marginEnd="94dp"
            android:layout_toStartOf="@+id/imageView14"
            android:src="@drawable/icon_common_dot"/>

    </RelativeLayout>


</LinearLayout>